--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.20",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "groq-sdk": "^0.34.0",
     "handlebars": "^4.7.8",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "openai": "^6.3.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
